# Clarity_NLP

./: .gitignore  README.md  pyproject.toml
app/: __init__.py  main.py  schemas.py
app/api/: routes.py
app/core/: config.py
app/services/: __init__.py  annotation.py  intelligence.py  pipeline.py  preprocessing.py  sentiment.py
app/static/: app.js  index.html  styles.css
tests/: test_api.py  test_preprocessing.py
