[project]
name = "nlp-preprocessing-engine"
version = "1.0.0"
description = "Production-grade NLP preprocessing and analysis workbench inspired by the original notebook repository."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.0.0",
  "scikit-learn>=1.5.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
